# gcp

./: .gitignore  README.md  cloudbuild.yaml  test.cloudbuild.yaml
cloud-architect-certification/: README.md
cloud-devops-engineer-certification/: README.md
cloudsql-maintenance-helper/: .env.example  README.md  go.mod
cloudsql-maintenance-helper/cmd/: main.go
cloudsql-maintenance-helper/config/: instances.yaml
cloudsql-maintenance-helper/pkg/patch/: patch.go
cloudsql-maintenance-helper/pkg/restart/: restart.go
cloudsql-maintenance-helpers/: go.mod  go.sum
deploy-gke-quickstart/: clouddeploy.yaml
gcloud-node-cmd/: .env.example  main.go
gcp-compute-remote-executor/: README.md  go.mod  go.sum  main.go
k8s-checker/: go.mod  main.go
kubernetes-pod-stats/: README.md
python-app-cloudbuild/: cloudbuild.yaml
spanner-lib/: README.md  pyproject.toml
spanner-lib/migrations/: schema.sql
spanner-lib/spanner/libs/: utils.py
sre-workshop/: README.md  package-lock.json  package.json
sre-workshop/app/: layout.tsx  page.tsx
